force-app/main/default/objects/ProductCharacteristics__c/ProductCharacteristics__c.object-meta.xml
<CustomObject>
    <label>Product Characteristics</label>
    <nameField>
        <label>Default Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Characteristics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>