force-app/main/default/objects/ProductCharacteristics__c/fields/Facet__c.field-meta.xml
<CustomField>
    <fullName>Facet__c</fullName>
    <formula>FacetCode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facet</label>
    <type>Text</type>
</CustomField>