force-app/main/default/objects/ProductCharacteristics__c/fields/FacetCode__c.field-meta.xml
<CustomField>
    <fullName>FacetCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facet Code</label>
    <referenceTo>FacetCode__c</referenceTo>
    <relationshipLabel>Product Characteristics</relationshipLabel>
    <relationshipName>Product_Characteristics</relationshipName>
    <type>Lookup</type>
</CustomField>