force-app/main/default/objects/ProductCharacteristics__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>ProductCharacteristics__c</referenceTo>
    <relationshipLabel>Product Characteristics</relationshipLabel>
    <relationshipName>Product_Characteristics</relationshipName>
    <type>Lookup</type>
</CustomField>