force-app/main/default/objects/ProductCharacteristics__c/fields/ProdDivision__c.field-meta.xml
<CustomField>
    <fullName>ProdDivision__c</fullName>
    <label>Product Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessDivisions</valueSetName>
    </valueSet>
</CustomField>