force-app/main/default/objects/ProductCharacteristics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>Characteristic__c</columns>
    <columns>ProdDivision__c</columns>
    <columns>IsActive__c</columns>
    <columns>Level__c</columns>
    <columns>FacetCode__c</columns>
    <columns>Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>